--- a/index.html
+++ b/index.html
@@ -1,173 +1,214 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Fashion AI Landing</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI Creator | Видео • Обучение • UGC</title>
+  <meta name="description" content="Обучение нейросетям, AI-видео, реклама и UGC-контент премиум уровня" />
 
-<style>
-/* ===== RESET ===== */
-*{
-margin:0;
-padding:0;
-box-sizing:border-box;
-font-family:Arial, Helvetica, sans-serif;
-}
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
-body{
-height:100vh;
-color:white;
-overflow-x:hidden;
-background:black;
-}
+  <style>
+    :root{
+      --neon-pink:#ff2fdc;
+      --neon-purple:#7c7cff;
+      --acid:#00ffd5;
+      --bg:#07070b;
+    }
 
-/* ===== ДВИГАЮЩИЙСЯ FASHION ФОН ===== */
-body::before{
-content:"";
-position:fixed;
-top:0;
-left:0;
-width:200%;
-height:200%;
-background:
-radial-gradient(circle at 20% 20%, #111 0%, transparent 40%),
-radial-gradient(circle at 80% 70%, #0a0a0a 0%, transparent 40%);
-animation:moveBg 15s linear infinite;
-z-index:-2;
-}
+    *{box-sizing:border-box;margin:0;padding:0}
 
-@keyframes moveBg{
-0%{transform:translate(0,0);}
-50%{transform:translate(-10%,-10%);}
-100%{transform:translate(0,0);}
-}
+    body{
+      font-family:'Inter',sans-serif;
+      background:var(--bg);
+      color:#fff;
+      line-height:1.6;
+      overflow-x:hidden;
+    }
 
-/* ===== GLASSMORPHISM КОНТЕЙНЕР ===== */
-.container{
-max-width:1100px;
-margin:auto;
-padding:40px;
-backdrop-filter:blur(20px);
-background:rgba(255,255,255,0.05);
-border-radius:20px;
-border:1px solid rgba(255,255,255,0.1);
-margin-top:60px;
-}
+    /* BACKGROUND IMAGE (2nd PHOTO) */
+    body::before{
+      content:"";
+      position:fixed;
+      inset:0;
+      background:url('background.jpg') center/cover no-repeat;
+      opacity:0.15;
+      z-index:-2;
+    }
 
-/* ===== НЕОНОВЫЕ КНОПКИ ===== */
-.neon-btn{
-padding:15px 30px;
-border:none;
-color:white;
-font-size:16px;
-background:rgba(255,255,255,0.05);
-border-radius:10px;
-cursor:pointer;
-position:relative;
-overflow:hidden;
-transition:0.3s;
-}
+    body::after{
+      content:"";
+      position:fixed;
+      inset:0;
+      background:linear-gradient(180deg,#07070b 10%,rgba(7,7,11,0.8),#07070b 90%);
+      z-index:-1;
+    }
 
-.neon-btn::before{
-content:"";
-position:absolute;
-top:0;
-left:-100%;
-width:100%;
-height:100%;
-background:linear-gradient(120deg,transparent,#fff,transparent);
-opacity:0.3;
-transition:0.5s;
-}
+    .container{max-width:1100px;margin:auto;padding:60px 20px}
 
-.neon-btn:hover::before{
-left:100%;
-}
+    /* HERO */
+    .badge{
+      display:inline-block;
+      padding:8px 18px;
+      border:1px solid var(--neon-pink);
+      color:var(--neon-pink);
+      border-radius:30px;
+      box-shadow:0 0 20px var(--neon-pink);
+      margin-bottom:25px;
+      font-weight:600;
+    }
 
-.neon-btn:hover{
-transform:translateY(-3px) scale(1.05);
-box-shadow:0 0 20px rgba(255,255,255,0.2);
-}
+    h1{
+      font-size:48px;
+      font-weight:800;
+      margin-bottom:20px;
+      text-shadow:0 0 30px rgba(255,47,220,.4);
+    }
 
-/* ===== ИНТЕРАКТИВНЫЕ КАРТОЧКИ ===== */
-.cards{
-display:flex;
-gap:20px;
-flex-wrap:wrap;
-margin-top:30px;
-}
+    .lead{font-size:20px;color:#d7d7ff;max-width:750px}
 
-.card{
-flex:1;
-min-width:250px;
-padding:30px;
-background:rgba(255,255,255,0.04);
-border-radius:15px;
-transition:0.4s;
-border:1px solid rgba(255,255,255,0.08);
-}
+    /* BUTTON */
+    .btn{
+      display:inline-block;
+      margin-top:35px;
+      padding:18px 34px;
+      color:#000;
+      font-weight:800;
+      border-radius:14px;
+      background:linear-gradient(135deg,var(--neon-pink),var(--acid));
+      box-shadow:0 0 35px var(--neon-pink);
+      position:relative;
+      text-decoration:none;
+    }
 
-.card:hover{
-transform:scale(1.07) rotateX(5deg);
-background:rgba(255,255,255,0.08);
-box-shadow:0 20px 40px rgba(0,0,0,0.6);
-}
+    .btn::after{
+      content:"";
+      position:absolute;
+      left:10%;right:10%;bottom:-18px;height:18px;
+      background:linear-gradient(180deg,var(--neon-pink),transparent);
+      filter:blur(12px);
+    }
 
-/* ===== FASHION HEADER ===== */
-h1{
-font-size:48px;
-margin-bottom:10px;
-letter-spacing:3px;
-}
+    section{margin-top:100px}
 
-.subtitle{
-opacity:0.6;
-margin-bottom:25px;
-}
-</style>
+    h2{
+      font-size:34px;
+      margin-bottom:40px;
+      color:var(--neon-purple);
+      text-shadow:0 0 25px var(--neon-purple);
+    }
+
+    /* GRID */
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:28px}
+
+    .card{
+      background:rgba(255,255,255,0.04);
+      border:1px solid rgba(255,47,220,0.4);
+      padding:30px;
+      border-radius:22px;
+      box-shadow:0 0 30px rgba(255,47,220,0.15);
+    }
+
+    .price{
+      font-size:28px;
+      font-weight:800;
+      color:var(--acid);
+      margin-top:15px;
+    }
+
+    /* PORTFOLIO */
+    .portfolio{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+      gap:20px;
+    }
+
+    .portfolio img{
+      width:100%;
+      border-radius:20px;
+      border:1px solid var(--neon-pink);
+      box-shadow:0 0 25px rgba(255,47,220,.4);
+    }
+
+    /* FOOTER */
+    footer{
+      margin-top:120px;
+      text-align:center;
+      color:#aaa;
+      font-size:14px;
+    }
+
+    .icons img{height:36px;margin:10px;filter:drop-shadow(0 0 8px var(--neon-pink))}
+
+  </style>
 </head>
-
 <body>
 
 <div class="container">
-<h1>FASHION AI</h1>
-<p class="subtitle">Luxury Digital Experience</p>
+  <span class="badge">AI • VIDEO • UGC</span>
+  <h1>Премиум AI‑контент <br>и обучение нейросетям</h1>
+  <p class="lead">
+    Генерирую AI‑видео, рекламу, UGC и обучаю работе с топовыми нейросетями.
+    Дорого, стильно, эффективно. Без съёмок и лишних затрат.
+  </p>
+  <a class="btn" href="https://t.me/aiKarinochka" target="_blank">Связаться в Telegram</a>
 
-<button class="neon-btn">Instagram</button>
-<button class="neon-btn">Услуги</button>
+  <!-- PORTFOLIO -->
+  <section>
+    <h2>Примеры работ</h2>
+    <div class="portfolio">
+      <!-- ЗАМЕНИ НА СВОИ ФОТО -->
+      <img src="work1.jpg" alt="AI work">
+      <img src="work2.jpg" alt="AI work">
+      <img src="work3.jpg" alt="AI work">
+    </div>
+  </section>
 
-<div class="cards">
-<div class="card">
-<h3>AI Дизайн</h3>
-<p>Создание luxury визуала</p>
-</div>
+  <!-- PRICES -->
+  <section>
+    <h2>Услуги и расценки</h2>
+    <div class="grid">
+      <div class="card">
+        <h3>🎓 Обучение нейросетям</h3>
+        <p>5 онлайн‑уроков в созвоне. Практика сразу. Покажу, как зарабатывать на AI‑рекламе и видео.</p>
+        <p>Видео, реклама, мини‑фильмы, баннеры, нейрофотосессии, AI‑аватары, музыка.</p>
+        <div class="price">7 000 ₽</div>
+      </div>
 
-<div class="card">
-<h3>Branding</h3>
-<p>Balenciaga style айдентика</p>
-</div>
+      <div class="card">
+        <h3>🎥 Генерация AI‑видео</h3>
+        <p>Реклама, визуалы, логотипы, музыка, AI‑модели и инфлюенсеры под любой запрос.</p>
+        <div class="price">от 5 000 ₽</div>
+      </div>
 
-<div class="card">
-<h3>Web Fashion</h3>
-<p>Интерактивные сайты</p>
-</div>
-</div>
-</div>
+      <div class="card">
+        <h3>📸 UGC‑креатор</h3>
+        <p>Реалистичная эмоциональная реклама продукта.</p>
+        <p>3 мини‑видео + 5 фото.</p>
+        <div class="price">от 3 000 ₽</div>
+      </div>
+    </div>
+  </section>
 
-<script>
-// лёгкий интерактив наклона карточек
-document.querySelectorAll(".card").forEach(card=>{
-card.addEventListener("mousemove",e=>{
-let x=(e.offsetX/card.clientWidth-0.5)*10;
-let y=(e.offsetY/card.clientHeight-0.5)*-10;
-card.style.transform=`rotateX(${y}deg) rotateY(${x}deg) scale(1.07)`;
-});
-card.addEventListener("mouseleave",()=>{
-card.style.transform="scale(1)";
-});
-});
-</script>
+  <!-- PLATFORMS -->
+  <section>
+    <h2>Площадки</h2>
+    <div class="icons">
+      <img src="icons/instagram.svg" alt="Instagram">
+      <img src="icons/tiktok.svg" alt="TikTok">
+      <img src="icons/youtube.svg" alt="YouTube">
+      <img src="icons/telegram.svg" alt="Telegram">
+    </div>
+  </section>
+
+  <footer>
+    © 2026 AI Creator<br>
+    Telegram: @aiKarinochka • Email: karina.makeeva@yahoo.com
+  </footer>
+</div>
 
 </body>
 </html>
+
 
