--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@ body{
   overflow-x:hidden;
 }
 
-/* VIDEO BACKGROUND */
+/* VIDEO BG */
 .video-bg{
   position:fixed;
   inset:0;
-  z-index:-3;
-  overflow:hidden;
+  z-index:-2;
 }
 .video-bg video{
   width:100%;
@@ -40,7 +39,7 @@ body{
   content:"";
   position:absolute;
   inset:0;
-  background:radial-gradient(circle at top, #1a0020, #050508 70%);
+  background:radial-gradient(circle at top,#1a0020,#050508 70%);
 }
 
 /* CONTAINER */
@@ -48,6 +47,16 @@ body{
   max-width:1100px;
   margin:auto;
   padding:90px 20px;
+}
+
+/* GLASS */
+.glass{
+  background:rgba(255,255,255,.08);
+  backdrop-filter:blur(18px);
+  -webkit-backdrop-filter:blur(18px);
+  border:1px solid rgba(255,255,255,.25);
+  border-radius:28px;
+  box-shadow:0 0 60px rgba(255,47,220,.25);
 }
 
 /* HERO */
@@ -61,31 +70,27 @@ body{
   margin-bottom:25px;
 }
 
-/* AI SCAN */
-.scan{
+h1{
   font-size:54px;
   font-weight:800;
+  text-shadow:0 0 40px rgba(255,47,220,.6);
+}
+
+/* AI SCAN */
+.scan{
   position:relative;
   display:inline-block;
-  text-shadow:0 0 40px rgba(255,47,220,.6);
   overflow:hidden;
 }
 .scan::after{
   content:"";
   position:absolute;
   inset:0;
-  background:linear-gradient(
-    120deg,
-    transparent 0%,
-    rgba(255,255,255,.9) 50%,
-    transparent 100%
-  );
+  background:linear-gradient(120deg,transparent,rgba(255,255,255,.9),transparent);
   transform:translateX(-100%);
   animation:scan 3s infinite;
 }
-@keyframes scan{
-  to{transform:translateX(100%)}
-}
+@keyframes scan{to{transform:translateX(100%)}}
 
 .lead{
   font-size:22px;
@@ -112,10 +117,7 @@ section{
   transform:translateY(60px);
   transition:1s ease;
 }
-section.show{
-  opacity:1;
-  transform:none;
-}
+section.show{opacity:1;transform:none}
 
 h2{
   font-size:36px;
@@ -124,7 +126,7 @@ h2{
   text-shadow:0 0 30px var(--purple);
 }
 
-/* PORTFOLIO VIDEO */
+/* PORTFOLIO */
 .portfolio{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
@@ -132,80 +134,34 @@ h2{
 }
 .portfolio video{
   width:100%;
-  border-radius:24px;
-  border:1px solid var(--pink);
-  box-shadow:0 0 35px rgba(255,47,220,.6);
-  transition:.5s;
-}
-.portfolio video:hover{
-  transform:scale(1.08);
-  box-shadow:0 0 80px rgba(255,47,220,1);
+  border-radius:22px;
+  box-shadow:0 0 40px rgba(255,47,220,.7);
 }
 
 /* CARDS */
 .grid{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
   gap:30px;
 }
 .card{
-  background:rgba(255,255,255,.06);
-  border:1px solid rgba(255,47,220,.5);
-  padding:32px;
-  border-radius:26px;
-  box-shadow:0 0 40px rgba(255,47,220,.25);
-  transition:.5s;
+  padding:34px;
 }
-.card:hover{
-  transform:translateY(-12px);
-  box-shadow:0 0 80px rgba(255,47,220,.7);
-}
-
 .price{
   font-size:30px;
   color:var(--acid);
   font-weight:800;
-  margin-top:20px;
+  margin-top:18px;
 }
 
-/* SOCIALS */
-.socials{
-  display:flex;
-  flex-wrap:wrap;
-  gap:18px;
-  justify-content:center;
-}
-.social{
-  padding:14px 28px;
-  border-radius:40px;
-  text-decoration:none;
-  color:#fff;
-  font-weight:700;
-  border:1px solid rgba(255,255,255,.3);
-  box-shadow:0 0 25px rgba(255,255,255,.15);
-  transition:.4s;
-}
-.social:hover{
-  transform:scale(1.12);
-  box-shadow:0 0 45px var(--pink);
-}
-
-/* FOOTER */
-footer{
-  margin-top:160px;
-  text-align:center;
-  color:#aaa;
-}
-
-/* MOUSE TRAIL */
-.mouse{
+/* MOUSE */
+.cursor{
   position:fixed;
   width:14px;
   height:14px;
   border-radius:50%;
   background:radial-gradient(circle,var(--pink),var(--acid));
   pointer-events:none;
-  filter:blur(1px);
   z-index:9999;
 }
 </style>
@@ -213,9 +169,8 @@ footer{
 
 <body>
 
-<!-- VIDEO BACKGROUND -->
 <div class="video-bg">
-  <video autoplay muted loop playsinline>
+  <video autoplay muted loop playsinline poster="work1.jpg.png">
     <source src="work1.mp4" type="video/mp4">
   </video>
 </div>
@@ -237,84 +192,52 @@ footer{
 <section>
 <h2>Примеры работ</h2>
 <div class="portfolio">
-  <video src="work1.mp4" autoplay muted loop playsinline></video>
-  <video src="work2.mp4" autoplay muted loop playsinline></video>
-  <video src="work3.mp4" autoplay muted loop playsinline></video>
-  <video src="work4.mp4" autoplay muted loop playsinline></video>
+  <video src="work1.mp4" muted loop playsinline controls></video>
+  <video src="work2.mp4" muted loop playsinline controls></video>
+  <video src="work3.mp4" muted loop playsinline controls></video>
+  <video src="work4.mp4" muted loop playsinline controls></video>
 </div>
 </section>
 
 <section>
-<h2>Услуги</h2>
+<h2>Обучение AI-профессии</h2>
 <div class="grid">
-  <div class="card">
-    <h3>🎓 Обучение AI</h3>
-    <p>Практика + заработок</p>
+  <div class="card glass">
+    <p>
+      5 онлайн-уроков в созвоне с практикой.<br>
+      С первого занятия вы начинаете работать и зарабатывать.
+    </p>
+    <p>
+      Вы научитесь создавать AI-видео, рекламу и мини-фильмы, делать продающие фото,
+      баннеры и нейрофотосессии, создавать AI-аватаров, моделей и инфлюенсеров,
+      а также генерировать музыку и песни под любой запрос.
+    </p>
+    <p>
+      Я покажу, где и как сразу брать заказы,
+      создавая рекламу для клиентов на специальных платформах.
+    </p>
     <div class="price">7 000 ₽</div>
   </div>
-  <div class="card">
-    <h3>🎥 AI-видео</h3>
-    <p>Реклама и визуалы</p>
-    <div class="price">от 5 000 ₽</div>
-  </div>
-  <div class="card">
-    <h3>📸 UGC</h3>
-    <p>3 видео + 5 фото</p>
-    <div class="price">от 3 000 ₽</div>
-  </div>
 </div>
 </section>
-
-<section>
-<h2>Площадки</h2>
-<div class="socials">
-  <a class="social" href="#">Instagram</a>
-  <a class="social" href="#">TikTok</a>
-  <a class="social" href="#">YouTube</a>
-  <a class="social" href="#">Telegram</a>
-</div>
-</section>
-
-<footer>
-© 2026 AI Creator<br>
-Telegram: @aiKarinochka
-</footer>
 
 </div>
 
 <script>
-/* SCROLL ANIMATION */
-const sections=document.querySelectorAll("section");
+/* SCROLL */
 const obs=new IntersectionObserver(e=>{
-  e.forEach(x=>{
-    if(x.isIntersecting)x.target.classList.add("show");
-  });
+  e.forEach(x=>x.isIntersecting&&x.target.classList.add("show"))
 },{threshold:.2});
-sections.forEach(s=>obs.observe(s));
+document.querySelectorAll("section").forEach(s=>obs.observe(s));
 
-/* MOUSE TRAIL */
-const dots=[];
-for(let i=0;i<16;i++){
-  const d=document.createElement("div");
-  d.className="mouse";
-  document.body.appendChild(d);
-  dots.push({el:d,x:0,y:0});
-}
+/* MOUSE */
+const c=document.createElement("div");
+c.className="cursor";
+document.body.appendChild(c);
 document.addEventListener("mousemove",e=>{
-  dots[0].x=e.clientX;
-  dots[0].y=e.clientY;
+  c.style.left=e.clientX+"px";
+  c.style.top=e.clientY+"px";
 });
-function anim(){
-  for(let i=dots.length-1;i>0;i--){
-    dots[i].x+=(dots[i-1].x-dots[i].x)*0.4;
-    dots[i].y+=(dots[i-1].y-dots[i].y)*0.4;
-  }
-  dots.forEach(d=>{
-    d.el.style.transform=`translate(${d.x}px,${d.y}px)`;
-  });
-  requestAnimationFrame(anim);
-}
-anim();
 </script>
 
 </body>
