--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AI Creator</title>
+<title>AI Creator | Реклама • Видео • Обучение</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
@@ -11,52 +11,43 @@
 :root{
   --pink:#ff2fdc;
   --purple:#7c7cff;
-  --acid:#00ffd5;
+  --cyan:#00ffd5;
+  --bg:#05050a;
 }
 
 *{margin:0;padding:0;box-sizing:border-box}
 
 body{
   font-family:Inter,sans-serif;
+  background:radial-gradient(circle at top,#0b0b1a,#05050a 60%);
   color:#fff;
-  background:#050508;
   overflow-x:hidden;
 }
 
-/* VIDEO BG */
-.video-bg{
+/* STAR BACKGROUND */
+canvas#stars{
   position:fixed;
   inset:0;
-  z-index:-2;
+  z-index:-3;
 }
-.video-bg video{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  opacity:.35;
-}
-.video-bg::after{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:radial-gradient(circle at top,#1a0020,#050508 70%);
+
+/* NEON CURSOR */
+.cursor{
+  position:fixed;
+  width:18px;height:18px;
+  border-radius:50%;
+  background:var(--pink);
+  pointer-events:none;
+  mix-blend-mode:screen;
+  filter:blur(6px);
+  z-index:9999;
 }
 
 /* CONTAINER */
 .container{
-  max-width:1100px;
+  max-width:1200px;
   margin:auto;
-  padding:90px 20px;
-}
-
-/* GLASS */
-.glass{
-  background:rgba(255,255,255,.08);
-  backdrop-filter:blur(18px);
-  -webkit-backdrop-filter:blur(18px);
-  border:1px solid rgba(255,255,255,.25);
-  border-radius:28px;
-  box-shadow:0 0 60px rgba(255,47,220,.25);
+  padding:80px 20px;
 }
 
 /* HERO */
@@ -64,182 +55,237 @@ body{
   display:inline-block;
   padding:8px 18px;
   border:1px solid var(--pink);
-  border-radius:30px;
   color:var(--pink);
-  box-shadow:0 0 25px var(--pink);
+  border-radius:30px;
+  box-shadow:0 0 20px var(--pink);
   margin-bottom:25px;
 }
 
 h1{
-  font-size:54px;
+  font-size:52px;
   font-weight:800;
-  text-shadow:0 0 40px rgba(255,47,220,.6);
+  margin-bottom:20px;
+  text-shadow:0 0 30px rgba(255,47,220,.5);
 }
-
-/* AI SCAN */
-.scan{
-  position:relative;
-  display:inline-block;
-  overflow:hidden;
-}
-.scan::after{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:linear-gradient(120deg,transparent,rgba(255,255,255,.9),transparent);
-  transform:translateX(-100%);
-  animation:scan 3s infinite;
-}
-@keyframes scan{to{transform:translateX(100%)}}
 
 .lead{
   font-size:22px;
-  color:#e2e2ff;
-  margin-top:20px;
+  color:#d7d7ff;
+  max-width:760px;
 }
 
 .btn{
   display:inline-block;
   margin-top:40px;
   padding:18px 36px;
-  background:linear-gradient(135deg,var(--pink),var(--acid));
+  background:linear-gradient(135deg,var(--pink),var(--cyan));
   color:#000;
   font-weight:800;
   border-radius:16px;
   text-decoration:none;
-  box-shadow:0 0 45px var(--pink);
+  box-shadow:0 0 40px var(--pink);
+}
+
+/* VIDEO HERO */
+.hero-video{
+  margin-top:60px;
+  border-radius:28px;
+  overflow:hidden;
+  box-shadow:0 0 60px rgba(124,124,255,.4);
+}
+.hero-video video{
+  width:100%;
+  display:block;
 }
 
 /* SECTIONS */
-section{
-  margin-top:130px;
-  opacity:0;
-  transform:translateY(60px);
-  transition:1s ease;
-}
-section.show{opacity:1;transform:none}
+section{margin-top:120px}
 
 h2{
   font-size:36px;
-  margin-bottom:40px;
+  margin-bottom:50px;
   color:var(--purple);
-  text-shadow:0 0 30px var(--purple);
+  text-shadow:0 0 25px var(--purple);
+}
+
+/* GRID */
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+  gap:30px;
+}
+
+/* GLASS CARD */
+.card{
+  background:rgba(255,255,255,.06);
+  backdrop-filter:blur(18px);
+  border:1px solid rgba(255,255,255,.15);
+  padding:34px;
+  border-radius:28px;
+  box-shadow:0 0 40px rgba(255,47,220,.25);
+  position:relative;
+  overflow:hidden;
+}
+
+.card::after{
+  content:"";
+  position:absolute;
+  inset:0;
+  background:linear-gradient(120deg,transparent,rgba(255,255,255,.12),transparent);
+  animation:scan 6s linear infinite;
+}
+
+@keyframes scan{
+  0%{transform:translateX(-100%)}
+  100%{transform:translateX(100%)}
+}
+
+.price{
+  margin-top:20px;
+  font-size:30px;
+  font-weight:800;
+  color:var(--cyan);
 }
 
 /* PORTFOLIO */
 .portfolio{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:26px;
-}
-.portfolio video{
-  width:100%;
-  border-radius:22px;
-  box-shadow:0 0 40px rgba(255,47,220,.7);
-}
-
-/* CARDS */
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
   gap:30px;
 }
-.card{
-  padding:34px;
-}
-.price{
-  font-size:30px;
-  color:var(--acid);
-  font-weight:800;
-  margin-top:18px;
+
+.portfolio video{
+  width:100%;
+  border-radius:26px;
+  box-shadow:0 0 45px rgba(255,47,220,.4);
 }
 
-/* MOUSE */
-.cursor{
-  position:fixed;
-  width:14px;
-  height:14px;
-  border-radius:50%;
-  background:radial-gradient(circle,var(--pink),var(--acid));
-  pointer-events:none;
-  z-index:9999;
+/* FOOTER */
+footer{
+  margin-top:140px;
+  text-align:center;
+  color:#aaa;
+  font-size:14px;
 }
 </style>
 </head>
 
 <body>
 
-<div class="video-bg">
-  <video autoplay muted loop playsinline poster="work1.jpg.png">
-    <source src="work1.mp4" type="video/mp4">
-  </video>
-</div>
+<canvas id="stars"></canvas>
+<div class="cursor"></div>
 
 <div class="container">
+  <span class="badge">AI • VIDEO • UGC</span>
+  <h1>AI-реклама под ваш бизнес<br>Видео • UGC • Обучение</h1>
+  <p class="lead">
+    Создаю продающий AI-контент и обучаю топовым нейросетям.
+    Стильно. Эффективно. Без съёмок.
+  </p>
 
-<span class="badge">AI • VIDEO • UGC</span>
+  <a class="btn" href="https://t.me/aiKarinochka" target="_blank">Связаться в Telegram</a>
 
-<h1 class="scan">AI-реклама<br>под ваш бизнес</h1>
-
-<p class="lead">
-  AI-видео • обучение нейросетям • UGC-креатор
-</p>
-
-<a class="btn" href="https://t.me/aiKarinochka" target="_blank">
-  Связаться в Telegram
-</a>
-
-<section>
-<h2>Примеры работ</h2>
-<div class="portfolio">
-  <video src="work1.mp4" muted loop playsinline controls></video>
-  <video src="work2.mp4" muted loop playsinline controls></video>
-  <video src="work3.mp4" muted loop playsinline controls></video>
-  <video src="work4.mp4" muted loop playsinline controls></video>
-</div>
-</section>
-
-<section>
-<h2>Обучение AI-профессии</h2>
-<div class="grid">
-  <div class="card glass">
-    <p>
-      5 онлайн-уроков в созвоне с практикой.<br>
-      С первого занятия вы начинаете работать и зарабатывать.
-    </p>
-    <p>
-      Вы научитесь создавать AI-видео, рекламу и мини-фильмы, делать продающие фото,
-      баннеры и нейрофотосессии, создавать AI-аватаров, моделей и инфлюенсеров,
-      а также генерировать музыку и песни под любой запрос.
-    </p>
-    <p>
-      Я покажу, где и как сразу брать заказы,
-      создавая рекламу для клиентов на специальных платформах.
-    </p>
-    <div class="price">7 000 ₽</div>
+  <div class="hero-video">
+    <video src="work1.mp4" autoplay muted loop playsinline></video>
   </div>
-</div>
-</section>
 
+  <!-- PORTFOLIO -->
+  <section>
+    <h2>Примеры работ</h2>
+    <div class="portfolio">
+      <video src="work2.mp4" muted loop playsinline controls></video>
+      <video src="work3.mp4" muted loop playsinline controls></video>
+      <video src="work4.mp4" muted loop playsinline controls></video>
+    </div>
+  </section>
+
+  <!-- SERVICES -->
+  <section>
+    <h2>Услуги</h2>
+    <div class="grid">
+
+      <div class="card">
+        <h3>🎓 Обучение AI-профессии</h3>
+        <p>
+          5 онлайн-уроков в созвоне с практикой.
+          С первого занятия вы начинаете создавать проекты и зарабатывать.
+        </p>
+        <p>
+          AI-видео, реклама, мини-фильмы, фото и баннеры, нейрофотосессии,
+          AI-аватары и инфлюенсеры, генерация музыки.
+        </p>
+        <p>
+          Покажу, где и как сразу брать заказы на специальных платформах.
+        </p>
+        <div class="price">7 000 ₽</div>
+      </div>
+
+      <div class="card">
+        <h3>🎥 AI-видео и реклама</h3>
+        <p>
+          Рекламные ролики, визуалы, AI-модели, инфлюенсеры,
+          музыка и сценарии под ваш бизнес.
+        </p>
+        <div class="price">от 5 000 ₽</div>
+      </div>
+
+      <div class="card">
+        <h3>📸 UGC-креатор</h3>
+        <p>
+          Реалистичная эмоциональная реклама продукта.
+        </p>
+        <p>
+          3 видео + 5 фото для соцсетей.
+        </p>
+        <div class="price">от 3 000 ₽</div>
+      </div>
+
+    </div>
+  </section>
+
+  <footer>
+    © 2026 AI Creator<br>
+    Telegram: @aiKarinochka • Email: karina.makeeva@yahoo.com
+  </footer>
 </div>
 
 <script>
-/* SCROLL */
-const obs=new IntersectionObserver(e=>{
-  e.forEach(x=>x.isIntersecting&&x.target.classList.add("show"))
-},{threshold:.2});
-document.querySelectorAll("section").forEach(s=>obs.observe(s));
-
-/* MOUSE */
-const c=document.createElement("div");
-c.className="cursor";
-document.body.appendChild(c);
-document.addEventListener("mousemove",e=>{
-  c.style.left=e.clientX+"px";
-  c.style.top=e.clientY+"px";
+/* CURSOR */
+const cursor=document.querySelector('.cursor');
+document.addEventListener('mousemove',e=>{
+  cursor.style.transform=`translate(${e.clientX}px,${e.clientY}px)`;
 });
+
+/* STARS */
+const c=document.getElementById('stars'),ctx=c.getContext('2d');
+let w,h,stars=[];
+function resize(){
+  w=c.width=window.innerWidth;
+  h=c.height=window.innerHeight;
+  stars=Array.from({length:120},()=>({
+    x:Math.random()*w,
+    y:Math.random()*h,
+    r:Math.random()*1.5
+  }));
+}
+window.onresize=resize;
+resize();
+
+function draw(){
+  ctx.clearRect(0,0,w,h);
+  ctx.fillStyle='#fff';
+  stars.forEach(s=>{
+    ctx.globalAlpha=Math.random();
+    ctx.beginPath();
+    ctx.arc(s.x,s.y,s.r,0,Math.PI*2);
+    ctx.fill();
+  });
+  requestAnimationFrame(draw);
+}
+draw();
 </script>
 
 </body>
 </html>
+
 
